Fixed nav bar, added opacity, added hover on a tags (stretch goals)

--- a/css/index.css
+++ b/css/index.css
@@ -168,11 +168,8 @@ p {
   padding-bottom: 12px;
   background-color: #f6f6f6;
   border-bottom: 2px solid #f1f1f1;
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  opacity: 0.5;
+  width: 100%;
+  position: fixed;
 }
 .navigation h1 {
   font-size: 5rem;
@@ -182,7 +179,7 @@ p {
   display: flex;
   justify-content: space-evenly;
   margin: 0 30%;
-  opacity: 0.26;
+  opacity: 0.5;
 }
 @media (max-width: 500px) {
   .navigation .nav {
@@ -218,6 +215,7 @@ footer {
   padding: 0 15px;
 }
 .home .intro .horizon {
+  margin-top: 14%;
   border-radius: 10px;
 }
 @media (max-width: 500px) {
