--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,120 @@
 // add .every-btn() mixin
 // add .flex-center() mixin
 
+// .home {
+//   .intro {
+//     h2 {
+//       padding: 15px;
+//     } //h2
+
+//     p {
+//       padding: 0 15px;
+//     } // p
+
+//     .horizon {
+//       border-radius: 10px;
+//       @media @phone {
+//         max-width: 100%;
+//       } // media
+//     } // horizon
+//   } // into
+
+//   .space-images {
+//     display: flex;
+//     flex-wrap: wrap;
+//     width: 100%;
+
+//     img {
+//       width: 28%;
+//       margin: 20px 2.5%;
+//       border-radius: 20px;
+//       height: 100%;
+//     } // img
+
+//     .sky,
+//     .launch {
+//       @media @phone {
+//         display: none;
+//       } // media
+//     } // sky launch
+
+//     .blast {
+//       @media @phone {
+//         width: 92%;
+//         margin: 4% auto;
+//       }
+//     }
+//   } // space-image
+
+//   .visit-planets {
+//     padding: 15px;
+
+//     h3 {
+//       margin-top: 11px;
+//     } // h3
+
+//     p {
+//       margin-top: 13px;
+//     } // p
+//   }
+
+//   .walk {
+//     margin-top: 60px;
+//     border-top: 1px solid @main-border-color;
+//     padding: 50px 60px;
+//     // display: flex;
+//     // justify-content: center;
+//     // mixin
+//     .flex-center();
+
+//     @media @phone {
+//       display: flex;
+//       flex-direction: column-reverse;
+//       padding: 15px;
+//     }
+
+//     .walk-text {
+//       width: 50%;
+
+//       @media @phone {
+//         width: 100%;
+//       }
+
+//       h3 {
+//         margin-bottom: 10px;
+//       } // h3
+
+//       p {
+//         margin-bottom: 26px;
+//       } // p
+//     }
+//     .btn {
+//       // mixin
+//       .every-btn();
+//       @media @phone {
+//         width: 100%;
+//         padding: 28px 0;
+//       }
+//     } // btn
+//   } // walk-text
+
+//   .walk-img {
+//     width: 46%;
+//     margin-left: 4%;
+//     @media @phone {
+//       width: 100%;
+//       margin: 2% auto 4% auto;
+//     }
+
+//     img {
+//       width: 100%;
+//       height: auto;
+//       border-radius: 10px;
+//     } // img
+//   } // walk-img
+// } // home
+
+// STRETCH
 .home {
   .intro {
     h2 {
@@ -13,6 +127,7 @@
     } // p
 
     .horizon {
+      margin-top: 14%;
       border-radius: 10px;
       @media @phone {
         max-width: 100%;
