--- a/less/navigation.less
+++ b/less/navigation.less
@@ -43,11 +43,8 @@
   padding-bottom: 12px;
   background-color: @nav-bg;
   border-bottom: 2px solid @nav-border;
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  opacity: 0.5;
+  width: 100%;
+  position: fixed;
 
   h1 {
     font-size: 5rem;
@@ -61,7 +58,7 @@
     @media @phone {
       margin: 0;
     }
-    opacity: 0.26;
+    opacity: 0.5;
 
     a {
       text-decoration: none;
